form input with model

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "69e706e5-0355-4ce5-87d8-327aa9af741f"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
